--- a/src/components/listingcard/card/card.css
+++ b/src/components/listingcard/card/card.css
@@ -10,12 +10,9 @@
   border: 0.5px solid rgba(24, 163, 24, 0.479) !important;
   border-radius: calc(var(--curve) * 1px);
   box-shadow: "3px 3px 3px #00000055";
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: 2rem;
-  /* margin: 4rem 5vw; */
   padding: 0;
   list-style-type: none;
+  width: 370px;
 }
 
 .card {
@@ -118,8 +115,7 @@
 
 @media screen and (max-width: 768px) {
   .cards {
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    margin: 2rem 3vw;
+   width: 49%;
   }
 
   .card__header {
@@ -142,4 +138,9 @@
   .card__description {
     padding: 0 1em 1em;
   }
+}
+@media screen and (max-width: 480px) {
+.cards{
+  width: 98%;
+}
 }
