--- a/src/components/listingcard/listingCard.css
+++ b/src/components/listingcard/listingCard.css
@@ -1,28 +1,28 @@
-.card--listing{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-column-gap: 1%;
-    grid-row-gap: 1%;
+.card--listing_container{
+    padding:1%
 }
-.card--listing_title{
-display: flex;
-flex-direction: row;
-justify-content: space-between;
-align-items: center;
-margin: 3vw;
+.card--listing {
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  flex-flow: row wrap;
+  max-width: 100%;
+  justify-content: space-around;
 }
-.card--listing_footer{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.card--listing_title {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
-@media (max-width:979px){
+.card--listing_footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+/* @media (max-width:979px){
     .card--listing{
     grid-template-columns: repeat(3, 1fr);
-
-    }
-    .card--listing_title{
-margin: 1vw;
 
     }
 }
@@ -31,13 +31,13 @@ margin: 1vw;
     grid-template-columns: repeat(2, 1fr);
 
     }
-}
-@media (max-width:480px){
-.card--listing_title{
-    justify-content: center;;
-flex-direction: column;
-}
-    .card--listing{
+} */
+@media (max-width: 480px) {
+  .card--listing_title {
+    justify-content: center;
+    flex-direction: column;
+  }
+  /* .card--listing{
     grid-template-columns: repeat(1, 1fr);
-    }
+    } */
 }
