--- a/src/App.css
+++ b/src/App.css
@@ -1,40 +1,29 @@
 .App {
-  width: 100%;
-  height: 100%;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+*{
+  font-family: 'Nunito', sans-serif;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* :root{
+  --primary:#CC3D3F;
+  --primary-derv:#5e2e2f;
+  --secondary:#f9fff6;
+  --secondary-derv:#dbf7cc;
+  --accent:#2f7509;
+  --accent-derv:#789767;
+  --black:#2d2d2e;
+  
+} */
+:root{
+  --primary:#437c24;
+  --primary-derv:#789767;
+  --secondary:#f9fff6;
+  --secondary-derv:#dbf7cc;
+  --accent:#CC3D3F;
+  --accent-derv:#5e2e2f;
+  --black:#2d2d2e;
+  
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+body{
+  background-color: var(--secondary);
 }
