--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,39 +1,78 @@
 .home-wrapper-Container {
-  padding: 0 10px;
-  background-color: #4f7f33;
+  gap: 20px;
+  background-color: var(--primary);
   box-shadow: #3f3f3f 1px 1px 1px 1px;
   display: flex;
   align-items: center;
   flex-direction: column;
 }
+/* Top Header styling */
 
 .header-container {
+  padding: 0 10px;
+  background-color: var(--primary-derv);
   width: 100%;
   justify-content: space-between;
   display: flex;
   flex-direction: row;
   align-items: center;
 }
+
+.header-container div {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+
+.contact-us-button {
+  border-radius: 20px;
+  color: var(--secondary);
+  border: 1px solid var(--secondary);
+  background-color: var(--accent);
+  border-color: var(--secondary);
+  padding: 5px 10px;
+}
+.contact-us-button:hover {
+  cursor: pointer;
+  background-color: var(--accent-derv);
+  transform: scale(1.01);
+  transition: 0.3s ease-in-out;
+}  
+.first-p-logo {
+  color: var(--secondary);
+}
+.social-media-icon > a {
+  color: var(--secondary);
+  height: 1em;
+}
+.navbar-social  a {
+  color: var(--secondary);
+  text-decoration: none;
+}
+.navbar-social  a:hover {
+    color: var(--secondary-derv);
+    transform: scale(1.02);
+    transition: 0.3s ease-in-out;
+}
+.first-p-logo {
+  color: var(--secondary);
+}
+.social-media-icon a:hover {
+  color: var(--secondary-derv);
+  transform: scale(1.1);
+  transition: 0.2s ease-in-out;
+}
+
+/* Middle Header Styling */
 .middle-header-container {
   justify-content: center;
   align-items: center;
   display: flex;
   flex-direction: row;
-}
-.header-container > div {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  gap: 10px;
-}
-.header-container > div > div {
-  gap: 10px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-}
+}  
+/* Bottom Header Styling */
 .last-header-navbar {
   display: flex;
   flex-direction: row;
@@ -41,13 +80,13 @@
   width: 50%;
   margin-top: 15px;
   margin-bottom: 10px;
-}
+}  
 .last-header-navbar  a {
-  color: white;
+  color: var(--secondary);
   font-size: 1.3rem;
   font-weight: 400;
   text-decoration: none;
-}
+}  
 .last-header-navbar a::after {
   content: "";
   display: block;
@@ -57,55 +96,16 @@
   top: 5px;
   background: transparent;
   transition: all 0.6s;
-}
+}  
 .last-header-navbar a:hover::after {
   width: 100%;
-  background: white;
-}
+  background: var(--secondary);
+}  
 .last-header-navbar div {
-  background-color: #4f7f33;
-  color: white;
+  background-color: var(--primary);
+  color: var(--secondary);
   font-size: 16px;
-}
-.contact-us-button {
-  border-radius: 20px;
-  color: white;
-  border: 1px solid white;
-  background-color: #c04446;
-  border-color: white;
-  padding: 5px 10px;
-}
-.contact-us-button:hover {
-  cursor: pointer;
-  background-color: #b45f60;
-  transform: scale(1.01);
-  transition: 0.3s ease-in-out;
-}
-.first-p-logo {
-  color: white;
-}
-.social-media-icon > a {
-  color: white;
-  height: 1em;
-}
-.navbar-social  a {
-  color: white;
-  text-decoration: none;
-}
-.navbar-social  a:hover {
-    color: #e6e6e6;
-    transform: scale(1.02);
-    transition: 0.3s ease-in-out;
-}
-.first-p-logo {
-  color: white;
-}
-.social-media-icon a:hover {
-  color: #e6e6e6;
-  transform: scale(1.1);
-  transition: 0.2s ease-in-out;
-}
-
+}  
 
 
 .dropdown {
@@ -113,11 +113,12 @@
   display: inline-block;
 }
 .dropdown-content {
+  
   position: absolute;
-  background-color: #f9f9f9;
+  background-color: var(--secondary-derv);
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+  z-index: 999;
   opacity: 0;
   visibility: hidden;
   border-top: none;
@@ -133,7 +134,7 @@
 }
 
 .dropdown-content a {
-  color: white;
+  color: var(--secondary);
   padding: 12px 16px;
   text-decoration: none;
   text-align: left;
@@ -141,9 +142,9 @@
   display: block;
 }
 .dropdown-content a:hover {
-  background-color: #ddd;
-  color: #4f7f33;
-  border: #4f7f33;
+  background-color: var(--secondary-derv);
+  color: var(--primary);
+  border: var(--primary);
 }
 
 
@@ -245,7 +246,7 @@
     display: block !important;
   }
   .mobile-nav {
-    background-color: #4f7f33;
+    background-color: var(--primary);
     width: 100%;
     height: 100%;
   }
