fixed contact button

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   font-family: 'Nunito', sans-serif;
 }
 :root{
-  --primary:#CC3D3F;
+  --primary:#c02a2c;
   --primary-derv:#5e2e2f;
   --secondary:#f7f6f5;
   --secondary-derv:#dbf7cc;
