--- a/src/components/listingcard/card/card.css
+++ b/src/components/listingcard/card/card.css
@@ -19,7 +19,7 @@ ul {
 	width: 100%;
 	height: 100%;
 	float: left;
-	background: white;
+	background: var(--accent);
 	box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
 }
 
@@ -60,19 +60,19 @@ ul {
 	left: -10px;
 	border-top-left-radius: 5px;
 	border-bottom-left-radius: 5px;
-	background: white;
+	background: var(--primary);
 	padding: 5px 10px;
 	box-shadow: -6px 0px 20px rgba(0, 0, 0, 0.1);
 }
 
 .restaurant .infos_left .prix_block .text_prix {
 	font-size: 15px;
-	color: rgba(0, 0, 0, 0.5);
+	color:var(--secondary-derv);
 }
 
 .restaurant .infos_left .prix_block .prix {
 	font-size: 18px;
-	color: #30CE89;
+	color: var(--primary);
 }
 
 .restaurant .infos_left .block_infos {
@@ -93,7 +93,7 @@ ul {
   text-align: left;
 	font-size: 18px;
 	margin: 10px 10px;
-	color: #30CE89;
+	color: var(--primary);
 }
 
 .restaurant .infos_left .block_infos .adress_block {
@@ -113,7 +113,7 @@ ul {
 }
 
 .restaurant .infos_left .block_infos .adress_block .locate {
-	background: #30CE89;
+	background: var(--primary);
 	color: white;
 	padding: 2px 10px;
 	border-radius: 5px;
@@ -146,17 +146,17 @@ ul {
 
 .ui-datepicker-header {
 	font-size: 10px;
-	background: #30CE89;
+	background: var(--primary);
 	color: white;
 }
 
 .ui-state-default.ui-state-active {
-	background: #30CE89 !important;
+	background: var(--primary) !important;
 	color: white !important;	
 }
 
 .ui-state-default.ui-state-highlight {
-	border: 2px solid #30CE89 !important;
+	border: 2px solid var(--primary) !important;
 }
 
 .ui-state-default {
