--- a/src/components/listingcard/card/card.css
+++ b/src/components/listingcard/card/card.css
@@ -10,7 +10,9 @@ ul {
   width: 378px;
   height: 400px;
   cursor: pointer;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
+  margin-top:20px;
+
 }
 
 .restaurant .infos_left {
@@ -164,3 +166,8 @@ ul {
 	border: none !important;
 	text-align: center !important;
 }
+@media (max-width: 800px) {
+
+	.restaurant{
+		width: 300px;
+	}}
