--- a/src/components/listingcard/listingCard.css
+++ b/src/components/listingcard/listingCard.css
@@ -7,6 +7,7 @@
   -webkit-box-direction: normal;
   flex-flow: row wrap;
   max-width: 100%;
+  gap:20px;
   justify-content: space-around;
 }
 .card--listing_title {
