--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -236,6 +236,9 @@
     background-position: 0% 50%;
   }
 }
+.mobile-version .navbar-social-container{
+display: none;
+}
 @media (max-width: 800px) {
   .dropdown-button {
     display: block!important;
@@ -261,13 +264,13 @@
     width: 50%;
     min-height: calc(100% - 80px);
     position: fixed;
-    top: 80px;
+    top: 65px;
     left: 0;
     z-index: 100;
-    justify-content: flex-start;
+    justify-content: space-between;
     transform: translateX(-100%);
     transition: transform 0.3s ease-in-out;
-    padding: 40px;
+    padding: 20px 40px;
   }
   .home-wrapper-Container button {
     background-color: transparent;
@@ -278,12 +281,14 @@
   .mobile-nav {
     background-color: var(--primary);
     width: 100%;
-    height: 100%;
+    height: 80%;
   }
   .mobile-nav .last-header-navbar {
     flex-direction: column;
     align-items: flex-start;
     z-index: 100;
+    margin: 20px 0;
+
   }
   .middle-header-container {
     justify-content: space-between;
@@ -297,9 +302,7 @@
   .middle-header-container img {
     width: 200px;
   }
-  .last-header-navbar.mobile-version a {
-    margin: 20px 0;
-  }
+
 
   .dropdown {
     width: 100%;
@@ -333,6 +336,20 @@
   .mobile-version {
     transform: translateX(0%);
   }
+
+  .mobile-version .navbar-social-container div{
+    display: flex;
+    flex-direction: row;
+  }
+  .mobile-version .navbar-social-container{
+    display: flex;
+    flex-direction: row;
+    justify-self: flex-end;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+  }
+
 }
 
 @media (max-width: 468px) {
