--- a/src/components/listingcard/card/card.css
+++ b/src/components/listingcard/card/card.css
@@ -33,7 +33,7 @@ ul {
 	height: 100%;
 	float: right;
 	background: white;
-	overflow-x: scroll;
+	/* overflow-x: scroll; */
 	box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
 	transition: width 0.5s;
 }
@@ -78,14 +78,17 @@ ul {
 }
 
 .restaurant .infos_left .block_infos {
-	width: 100%;
-	height: 40%;
-	background: white;
-	position: absolute;
-	bottom: 0;
-	left: 0;
-   box-shadow: 0px -6px 20px 0px rgba(0, 0, 0, 0.1);
-	transition: height 0.5s;
+    width: 100%;
+    height: 40%;
+    background: white;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    box-shadow: 0px -6px 20px 0px rgb(0 0 0 / 10%);
+    transition: height 0.5s;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 .restaurant .infos_left .block_infos h1 {
@@ -125,12 +128,15 @@ ul {
 
 .restaurant .infos_left .block_infos .description_block p {
 	text-align: justify;
-	padding: 0px 10px;
-	color: rgba(0, 0, 0, 0.8);
-	max-height: 72px;
+    padding: 0px 10px;
+    color: rgba(0, 0, 0, 0.8);
+    max-height: 72px;
     text-overflow: ellipsis;
-    width: 90%;
-    display: block;
+    width: 376px;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    white-space: pre-wrap;
     overflow: hidden
 }
 
