fixed some design and added a title for place form also added a card listing in add listing page

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   --primary-derv:#5e2e2f;
   --secondary:#f7f6f5;
   --secondary-derv:#dbf7cc;
-  --accent:#2f7509;
+  --accent:#74c159;
   --accent-derv:#789767;
   --black:#2d2d2e;
   
