--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -15,7 +15,7 @@
   flex-wrap: wrap;
   align-items: flex-start;
   justify-content: space-between;
-  color: #ccc;
+  color: var(--secondary);
 }
 .footer--container .col {
   flex-basis: 25%;
@@ -30,12 +30,12 @@
   width: fit-content;
   margin-bottom: 40px;
   position: relative;
-  color: #ccc;
+  color: var(--secondary);
 }
 .footer--container .email-id {
   width: fit-content;
-  border-bottom: 1px solid #ccc;
-  color: #ccc;
+  border-bottom: 1px solid var(--secondary);
+  color: var(--secondary);
   margin: 20px 0;
 }
 .footer--container ul {
@@ -47,7 +47,7 @@
 }
 .footer--container ul li a {
   text-decoration: none;
-  color: #ccc;
+  color: var(--secondary);
 }
 .footer--container .row {
   display: flex;
@@ -63,7 +63,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border-bottom: 1px solid #ccc;
+  border-bottom: 1px solid var(--secondary);
   margin-bottom: 50px;
 }
 .footer--container form > .far {
@@ -73,7 +73,7 @@
 .footer--container form input {
   width: 100%;
   background: transparent;
-  color: #ccc;
+  color: var(--secondary);
   border: 0;
   outline: none;
 }
@@ -85,7 +85,7 @@
 }
 .footer--container form button .fas {
   font-size: 16px;
-  color: #ccc;
+  color: var(--secondary);
 }
 .footer--container .social-media-icon-footer .social--footer {
   width: 40px;
@@ -94,7 +94,7 @@
   text-align: center;
   line-height: 40px;
   font-size: 20px;
-  color: #ccc;
+  color: var(--secondary);
   margin-right: 15px;
   cursor: pointer;
 }
