--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,8 @@
   --primary-derv:#5e2e2f;
   --secondary:#f7f6f5;
   --secondary-derv:#dbf7cc;
-  --accent:#74c159;
-  --accent-derv:#789767;
+  --accent:#5cc436;
+  --accent-derv:#668e50;
   --black:#2d2d2e;
   
 }
