--- a/src/pages/blogPost/blogPost.css
+++ b/src/pages/blogPost/blogPost.css
@@ -29,14 +29,14 @@
       left: 0;
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      object-fit:contain;
   }
   
   .blog__header {
     margin-bottom: 2rem;
   }
   
-  .blog__header__cat {
+  .blog__header__tag {
     display: block;
     text-transform: uppercase;
     font-size: 0.8rem;
@@ -44,7 +44,9 @@
     letter-spacing: 0.1rem;
     font-weight: bold;
     opacity: .6;
-    border-radius: 25%;
+    border-radius: 8%;
+    background-color: var( --accent);
+    width: fit-content;
   }
   
   .header__title {
@@ -71,9 +73,10 @@
       top: 0;
     }
   
-    .blog__header__cat {
+    .blog__header__tag {
       font-size: 1.1rem;
       margin-bottom: 3rem;
+      background-color: var( --accent);
     }
   
     .header__title {
