--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -18,6 +18,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  padding:5px;
 }
 
 .header-container div {
@@ -26,7 +27,8 @@
   align-items: center;
   justify-content: center;
 }
-
+/* .right-section-header{
+} */
 .first-p-logo {
   color: var(--secondary);
 }
@@ -85,11 +87,12 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  width: 70%;
+  width: 95%;
   margin-top: 15px;
   margin-bottom: 10px;
 }
-.last-header-navbar a {
+
+header a {
   color: var(--secondary);
   font-size: 1.3rem;
   font-weight: 400;
@@ -343,7 +346,7 @@ display: none;
   }
   .mobile-version .navbar-social-container{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-self: flex-end;
     justify-content: space-between;
     align-items: center;
