--- a/src/components/listingcard/card/card.css
+++ b/src/components/listingcard/card/card.css
@@ -112,15 +112,22 @@ ul {
 
 .restaurant .infos_left .block_infos .adress_block .adress {
   font-size: 12px;
-}
+  text-overflow: ellipsis;
+  max-width: 176px;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+  white-space: pre-wrap;
+  overflow: hidden;
+  }
 
-.restaurant .infos_left .block_infos .adress_block .locate {
-  background: var(--primary);
-  color: white;
-  padding: 2px 10px;
-  border-radius: 5px;
-}
-
+  
+  .restaurant .infos_left .block_infos .adress_block .locate {
+	  background: var(--primary);
+	  color: white;
+	  padding: 2px 10px;
+	  border-radius: 5px;
+	  
+	}
 .restaurant .infos_left .block_infos .description_block p {
   text-align: justify;
   padding: 0px 10px;
